bug 486063 -  AutoDialer support on Windows Mobile doesn't work just quite right r=blassey sr=stuart